--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:defaultNavHost="true"
             android:layout_marginBottom="22dp"
             app:layout_constraintBottom_toTopOf="@+id/cord"
             app:layout_constraintEnd_toEndOf="parent"
