--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="blackGray2">#333333</color>
     <color name="blackGray3">#4D4D4D</color>
 
+    <color name="blackGrayTrans">#90222222</color>
+
+    <color name="blackGreenTrans">#946C057E</color>
+
 </resources>
