--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -5,6 +5,11 @@
     android:id="@+id/main_nav_graph"
     app:startDestination="@id/setupFragment">
 
+    <action
+        android:id="@+id/action_notification_to_trackingFragment"
+        app:launchSingleTop="true"
+        app:destination="@id/trackingFragment" />
+
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.codingtester.fitnote.ui.fragments.HomeFragment"
