--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -6,19 +6,15 @@
     app:startDestination="@id/setupFragment">
 
     <action
-        android:id="@+id/action_notification_to_trackingFragment"
-        app:launchSingleTop="true"
-        app:destination="@id/trackingFragment" />
+        android:id="@+id/action_goto_trackingFragment"
+        app:destination="@id/trackingFragment"
+        app:launchSingleTop="true" />
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.codingtester.fitnote.ui.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_trackingFragment"
-            app:destination="@id/trackingFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.codingtester.fitnote.ui.fragments.SettingsFragment"
@@ -31,7 +27,9 @@
         tools:layout="@layout/fragment_setup" >
         <action
             android:id="@+id/action_setupFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/setupFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/statisticsFragment"
@@ -45,6 +43,10 @@
         tools:layout="@layout/fragment_tracking" >
         <action
             android:id="@+id/action_trackingFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
